Thu Jan  8 12:25:27 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, play.c, po/cs.po, po/da.po, po/de.po,
	po/en_US.po, po/es.po, po/fr.po, po/gnubg.pot, po/is.po, po/it.po,
	po/ja.po, po/ru.po, po/tr.po: Collect the check for last move in one
	function and let GetInputYN return TRUE when run non-interactively.
	Update the translations.

Sat Jan  3 23:53:54 CET 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gtkgame.c, gtkgame.h, play.c, render.c, set.c: Change
	confusing use of types in SetRNG, and other minor stuff

Tue Dec 30 18:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* render.c: Minor adjustment to 2d arrow size and outline colour.

Tue Dec 30 11:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, play.c: Add warning for simplified resign action.

Tue Dec 30 00:36:27 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkboard.c, gtkgame.c, play.c: add "resign -1" as a command
	to guess the resign level and add appropriately (i.e. resign if the
	error is below 0.05). Use it to autoresign or pop the resign dialog in
	the gui.

Mon Dec 29 23:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gnubg.c: Fix rare crash on exit.

Mon Dec 29 23:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* util.c: Hack GetTemporaryFile() so it will work properly.

Mon Dec 29 22:06:40 CET 2008 Christian Anthon <anthon@kiku.dk>

	* common.h, configure.in, lib/neuralnet.c, lib/neuralnetsse.c: move
	replacement declarations of signbit and lrint to common.h

Mon Dec 29 22:03:44 CET 2008 Christian Anthon <anthon@kiku.dk>

	* common.h, configure.in: 
Mon Dec 29 21:11:31 CET 2008 Christian Anthon <anthon@kiku.dk>

	* po/es.po: updated spanish translation

Mon Dec 29 11:56:38 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: turn splash screen off by default

Mon Dec 29 11:36:28 CET 2008 Christian Anthon <anthon@kiku.dk>

	* play.c: make end game work without gtk

Mon Dec 29 00:08:28 CET 2008 Christian Anthon <anthon@kiku.dk>
